deploy/terraform/modules/base_vpc_with_private_network/vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = "${var.vpc_cidr}"
  enable_dns_support   = "${var.enable_dns_support}"
  enable_dns_hostnames = "${var.enable_dns_hostnames}"

  tags {
    Name        = "${var.vpc_name}"
    Environment = "${lower(var.vpc_name)}"
  }
}
